--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ DATABASE_URL="file:./db.sqlite"
 # https://next-auth.js.org/configuration/options#secret
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
+
+# Next Auth Discord Provider
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
