--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "pre-build": "prisma generate && pnpm run dbinstall",
+    "pre-build": "pnpm prisma generate && pnpm run dbinstall",
     "lint": "next lint",
     "start": "next start",
-    "dbinstall": "prisma migrate dev",
+    "dbinstall": "pnpm prisma migrate dev",
     "latest": "ncu --upgrade && pnpm install",
     "format": "prettier . -written"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^5.12.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
@@ -55,7 +55,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
+    "prisma": "^5.12.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
